# pycon2020-azure-functions

./: .buildinfo  .gitignore  01_introduction.html  02_functions_intro.html  03_functions_deploy.html  03_functionsdeploy.html  04_data_function.html  04_datafunction.html  05_data_export.html  05_dataexport.html  06_complete_scenario.html  LICENSE  README.md  genindex.html  glossary.html  index.html  noxfile.py  objects.inv  pyproject.toml  resources.html  search.html  searchindex.js  setup.html
.github/workflows/: main.yml
_sources/: 01_introduction.rst.txt  02_functions_intro.rst.txt  03_functionsdeploy.rst.txt  04_data_function.rst.txt  05_data_export.rst.txt  05_dataexport.rst.txt  06_complete_scenario.rst.txt  glossary.rst.txt  index.rst.txt  setup.rst.txt
_static/: alabaster.css  copybutton.js  custom.css
docs/: -  01_introduction.rst  02_functions_intro.rst  03_functions_deploy.rst  03_functionsdeploy.rst  04_data_function.rst  04_datafunction.rst  05_data_export.rst  05_dataexport.rst  06_complete_scenario.rst  Makefile  conf.py  functions_101.rst  index.rst  introduction.rst  resources.rst  setup.rst
docs/_static/: custom.css
docs/_templates/: customlocaltoc.html
solutions/01-timer-function-data-acquisition/: requirements.txt
solutions/01-timer-function-data-acquisition/timer-function/: function.json  main_function.py
solutions/03-full-pipeline/: requirements.txt
solutions/03-full-pipeline/blob-manipulation/: __init__.py  (+2 more)
solutions/timer-function/: main_function.py
storage-blob-container/: azuredeploy.json  azuredeploy.parameters.json
(+10 files in other folders)
